...
    var matchUserDelegate: UserChoiceDelegate?
    
    // MARK: Initializer
    override init(frame: CGRect) {
        super.init(frame: .zero)
        configureSelf()
        self.accessibilityIdentifier = "swipeCardStackContainer"
    }
    
    required init?(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }
    
...
