...
import Lottie

class CustomAlertView: UIView {
    private let containerView = CustomContainerView(cornerRadius: 10)
    private let titleLabel = CustomLabel(text: "Thank You", textColor: UIColor.darkGray, textSize: 30, textWeight: .heavy)
    private let descriptionTextView = CustomTextView(text: "You are now able to see others in the same area. You are now able to see others in the same area", textAlignment: .center)
    private let doneButton = CustomButton(title: "DONE", color: Constants.Colors.amour, cornerRadius: 5)
    private let animationView: AnimationView = {
        let animationView = AnimationView(name: Constants.searchLocationAnimation)
        animationView.contentMode = .scaleAspectFill
        animationView.play()
        animationView.loopMode = .repeat(.infinity)
        animationView.animationSpeed = 3
...
